Fixed workflows & gradle