@@ -38,6 +38,13 @@ def getGitVersion() {
     }
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-preview"
+}
 
 repositories {
     mavenCentral()
@@ -63,7 +70,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
     installer('org.mangorage:installer:3.0.22')
-    bot('org.mangorage:mangobot:10.0.+')
+    bot('org.mangorage:mangobot:10.0.379')
 
     library('org.eclipse.mylyn.github:org.eclipse.egit.github.core:2.1.5')
     library('org.kohsuke:github-api:1.321')
